fixed jumping hero text

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,4 +1,3 @@
-/* SlidingContentBackground.css */
 .sliding-content-background {
   position: relative;
   overflow: hidden;
@@ -6,9 +5,7 @@
 
 .sliding-background {
   display: flex;
-  /* width: 300%; */
   width: 100%;
-  /* animation: slideBackground 12s linear infinite; */
 }
 
 .background-image {
@@ -19,9 +16,6 @@
   transition: opacity 1s;
 }
 
-/* .visible {
-  opacity: 1;
-} */
 .visible{
   background-image:  linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,  url('../../Assets/bg3.png');
   background-size: cover;
@@ -54,20 +48,6 @@
   font-size: 1.25rem;
 }
 
-@keyframes slideBackground {
-  0%,
-  33.33% {
-    transform: translateX(0);
-  }
-  36.66%,
-  66.66% {
-    transform: translateX(-33.33%);
-  }
-  70%,
-  100% {
-    transform: translateX(-66.66%);
-  }
-}
 
 .summit-info {
   width: 55%;
@@ -99,12 +79,17 @@
     font-size: 2.5rem;
   }
 }
-.summit-info span {
+.lcs{
+  display: flex;
+  gap: 15px;
+}
+.summit-info .lcs h3 {
   font-size: 6rem;
   font-weight: 400;
+  line-height: normal;
 }
 @media (max-width: 768px) {
-  .summit-info span {
+  .summit-info .lcs h3 {
     font-size: 2.5rem;
   }
 }
